# geokno_assignment

./: .gitignore  README.md  app.py  building_map.html  building_map_demo.html  demo.ipynb  pyproject.toml  requirements.txt
Data_lat_17.429330630542214_lng_78.33171725257132/: fp_lat_17.429330630542214_lng_78.33171725257132_p_15_fov_45.geojson  meta_lat_17.429330630542214_lng_78.33171725257132_p_15_fov_45.csv
Data_lat_17.4295349427362_lng_78.33249132516058/: meta_lat_17.4295349427362_lng_78.33249132516058_p_25_fov_85.csv
Data_lat_17.429636728930777_lng_78.33233387629137/: fp_lat_17.429636728930777_lng_78.33233387629137_p_25_fov_85.geojson  meta_lat_17.429636728930777_lng_78.33233387629137_p_25_fov_85.csv
Data_lat_17.45969949_lng_78.34808171/: fp_lat_17.45969949_lng_78.34808171_p_15_fov_45.geojson  meta_lat_17.45969949_lng_78.34808171_p_15_fov_45.csv
Data_lat_17.466868599733957_lng_78.30992252422388/: fp_lat_17.466868599733957_lng_78.30992252422388_p_15_fov_95.geojson  meta_lat_17.466868599733957_lng_78.30992252422388_p_15_fov_95.csv
Data_outputs/Data_lat_17.429330630542214_lng_78.33171725257132/: meta_lat_17.429330630542214_lng_78.33171725257132_p_15_fov_45.csv
Data_outputs/Data_lat_17.4295349427362_lng_78.33249132516058/: fp_lat_17.4295349427362_lng_78.33249132516058_p_25_fov_85.geojson  meta_lat_17.4295349427362_lng_78.33249132516058_p_25_fov_85.csv
src/: __init__.py  config.py  georeferencing.py  main.py  scrape_street_view.py  sign_board_classification.py  utils.py  windows_detection.py
(+2 files in other folders)
