[project]
name = "geokno-assignment"
version = "0.1.0"
description = "Street-Level Building Intelligence from Google Street View"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "albumentations",
    "easyocr>=1.7.2",
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "geopy==2.4.1",
    "huggingface-hub>=1.14.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "lab>=8.9",
    "mapbox-vector-tile>=2.2.0",
    "notebook>=7.5.6",
    "open-clip-torch>=3.3.0",
    "opencv-python",
    "osmnx>=2.1.0",
    "paddleocr>=3.5.0",
    "paddlepaddle>=3.3.1",
    "pandas>=3.0.3",
    "pillow",
    "pyngrok>=8.1.2",
    "pytesseract>=0.3.13",
    "pytorch-lightning",
    "requests",
    "scikit-learn>=1.8.0",
    "streamlit>=1.57.0",
    "streamlit-folium>=0.27.2",
    "tesseract>=0.1.3",
    "timm",
    "torch",
    "torchvision",
    "transformers>=5.8.1",
    "ultralytics>=8.4.50",
]
